# pyfqmr-Fast-Quadric-Mesh-Reduction

./: README.rst  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  test.yml
pyfqmr/: Simplify.h  Simplify.pyx  __init__.py  fastpyfqmr.cpp
