[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0",
  "pybind11",
  "numpy",
]

[project]
name = "pyfqmr"
authors = [
  { name = "kramer84" },
]
description = "pybind11 wrapper around C++ library for fast triangular mesh reduction"
readme = "README.rst"
license = { text = "MIT" }

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Natural Language :: English",
]

dependencies = ["numpy"]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Kramer84/pyfqmr-Fast-quadric-Mesh-Reduction"

[tool.setuptools]
include-package-data = true
packages = ["pyfqmr"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
